# serializer version: 1
# name: test_convert_ball_position
  '''
  position {
    x: 4.599999904632568
    y: 2.799999952316284
    z: 2.9000000953674316
  }
  velocity {
    x: 1.100000023841858
    y: 0.20000000298023224
    z: 0.30000001192092896
  }
  covariance {
    x {
      x: 1.0
      y: 2.0
      z: 3.0
    }
    y {
      x: 4.0
      y: 5.0
      z: 6.0
    }
    z {
      x: 7.0
      y: 8.0
      z: 9.0
    }
  }
  
  '''
# ---
# name: test_convert_current_pose
  '''
  x: 3.5999999046325684
  y: 1.7999999523162842
  z: 1.2167989015579224
  
  '''
# ---
# name: test_convert_current_pose.1
  '''
  x {
    x: 1.0
    y: 2.0
    z: 3.0
  }
  y {
    x: 4.0
    y: 5.0
    z: 6.0
  }
  z {
    x: 7.0
    y: 8.0
    z: 9.0
  }
  
  '''
# ---
# name: test_convert_empty_state
  '''
  current_pose {
    player_id: 2
    covariance {
      x {
        x: 100.0
      }
      y {
        y: 100.0
      }
      z {
        z: 100.0
      }
    }
    team: BLUE
  }
  ball {
    covariance {
      x {
        x: 100.0
      }
      y {
        y: 100.0
      }
      z {
        z: 100.0
      }
    }
  }
  time_to_ball: 9999.0
  
  '''
# ---
# name: test_convert_seen_robots
  '''
  [player_id: 2
  position {
    x: 3.5999999046325684
    y: 1.7999999523162842
    z: 1.2167989015579224
  }
  team: BLUE
  , player_id: 3
  position {
    x: 3.5999999046325684
    y: 1.7999999523162842
    z: 1.2167989015579224
  }
  team: RED
  , player_id: 4
  position {
    x: 3.5999999046325684
    y: 1.7999999523162842
    z: 1.2167989015579224
  }
  ]
  '''
# ---
# name: test_convert_seen_robots.1
  list([
    0.800000011920929,
    0.800000011920929,
    0.800000011920929,
  ])
# ---
# name: test_convert_target_pose
  '''
  position {
    x: 2.5999999046325684
    y: 0.800000011920929
    z: 1.2167989015579224
  }
  
  '''
# ---
# name: test_convert_time_to_ball_calculated
  1.2856487035751343
# ---
